[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://Fishing/FishingUpgradeScene.gd" id="1"]

[node name="FishingUpgradeScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.08, 0.08, 0.1, 1)

[node name="Title" type="Label" parent="."]
layout_mode = 1
offset_left = 24.0
offset_top = 20.0
offset_right = 600.0
offset_bottom = 56.0
text = "Fishing Upgrade Grid"

[node name="CurrencyLabel" type="Label" parent="." unique_name_in_owner=true]
layout_mode = 1
offset_left = 24.0
offset_top = 60.0
offset_right = 420.0
offset_bottom = 92.0
text = "Currency: 0"

[node name="StartBattle" type="Button" parent="."]
layout_mode = 1
offset_left = 1550.0
offset_top = 24.0
offset_right = 1880.0
offset_bottom = 70.0
text = "Start Battle"

[node name="MainMenu" type="Button" parent="."]
layout_mode = 1
offset_left = 1550.0
offset_top = 76.0
offset_right = 1880.0
offset_bottom = 122.0
text = "Main Menu"

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 110.0
offset_right = -20.0
offset_bottom = -60.0
grow_horizontal = 2
grow_vertical = 2

[node name="TreeLayer" type="Control" parent="ScrollContainer" unique_name_in_owner=true]
layout_mode = 2
custom_minimum_size = Vector2(2600, 2200)

[node name="InfoLabel" type="Label" parent="." unique_name_in_owner=true]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -50.0
offset_right = -20.0
offset_bottom = -14.0
grow_horizontal = 2
grow_vertical = 0
text = ""

[connection signal="pressed" from="StartBattle" to="." method="_on_start_battle_pressed"]
[connection signal="pressed" from="MainMenu" to="." method="_on_main_menu_pressed"]
